# Wayfinder

./: .codeclimate.yml  .gitignore  .gitleaks.toml  CONTEXT.md  README.draft.md  README.md  SECURITY.md  pyproject.toml  sonar-project.properties  wiki.yaml
.claude/: CLAUDE.md  compass.yaml  lintgate.yaml
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  mutation.yml  pages.yml  security-lite.yml
_site/: index.html  robots.txt  script.js  sitemap.xml  style.css
_site/1-design-thesis/: index.html
_site/1-introduction/: index.html
_site/2-the-proof-network/: index.html
_site/2-theoretical-framework/: index.html
_site/3-architecture-specification/: index.html
_site/3-scoring-system/: index.html
_site/4-spreading-activation/: index.html
_site/4-training/: index.html
_site/5-evaluation/: index.html
_site/5-nav-training-data/: index.html
_site/6-related-work/: index.html
_site/6-ternary-navigation/: index.html
_site/7-discussion/: index.html
_site/7-mutation-theory/: index.html
_site/8-module-architecture/: index.html
_site/9-configuration/: index.html
_site/abstract/: index.html
archive/: HARDENING_PLAN.md  Wayfinder_External_Research.md
configs/: base.yaml  wayfinder.yaml  wayfinder_specialist_apply.yaml  wayfinder_v2.yaml  wayfinder_v3.yaml
docs/: EXPERIMENT_RESULTS.md  MODEL_SELECTION.md  PLAN.md  PLAN_2.md  README.md  SPEC_COVERAGE_PLAN.md  WAYFINDER_DESIGN.md  WAYFINDER_PLAN.md  WAYFINDER_RESEARCH.md
lean/: WayfinderLean.lean  lakefile.toml
notebooks/: eval_pipeline_gpu.ipynb  golden_path.ipynb  lintgate_sweep.ipynb  offline_complete_analysis.ipynb
scripts/: analyze_benchmark_residuals.py  analyze_goal_start_issues.py  analyze_hard_proof_residuals.py  analyze_search_traces.py  anchor_gap_analysis.py  audit_hard_run.py  audit_postfreeze_stage2_smoke.py  audit_simp_residuals.py  benchmark_lane_b.py  build_apply_exec_dataset.py  build_canonical_local_data.py  build_dr_ducky_worklist.py  build_full_tactic_dataset.py  build_hard_collection_bundle.py  build_hard_proof_dataset.py  build_hard_resolution_layer.py  build_hard_theorem_split.py  build_move_inventory.py  build_nav_training_data.py  build_proof_network_db.py  build_residual_dataset.py  build_second_order_feature_dataset.py  build_second_order_packet_freeze.py  build_som_repair_delta_dataset.py  build_som_training_data.py  build_subtask_training_data.py  build_template_narrative_dataset.py  build_temporal_dataset.py  build_wesker_trace_mining_dataset.py  collect_apply_probes.py  collect_negatives.py  collect_trigger_parallel.sh  collect_trigger_states.py  context_ir_benchmark_audit.py  context_ir_census.py  convert_leandojo.py  dashboard.sh  encoder_backends.py  eval_encoders.py  eval_residual_retrieval.py  (+83 more)
src/: __init__.py  apply_scoper.py  arbiter.py  behavioral_fingerprint.py  benchmark_residuals.py  bridge.py  censor.py  coherence_engine.py  contracts.py  data.py  domain_gate.py  dr_ducky.py  dr_ducky_executor.py  encoder.py  encoder_config.py  energy.py  evaluate.py  goal_analyzer.py  hard_data_tags.py  hard_resolution_layer.py  hardtail_bridge.py  landmark_freeze.py  landmark_selectors.py  lean_context_ir.py  lean_interface.py  lens_guidance.py  lens_models.py  losses.py  lowering.py  move_supervision.py  nav_contracts.py  nav_model_factory.py  pab_metrics.py  pab_profile.py  pab_tracker.py  premise_retrieval.py  proof_auditor.py  proof_navigator.py  proof_network.py  proof_scoring.py  (+36 more)
tests/: test_analyze_benchmark_residuals.py  test_analyze_goal_start_issues.py  test_analyze_hard_proof_residuals.py  test_anchor_gap_analysis.py  test_apply047_compat_filter.py  test_arbiter.py  test_audit_hard_run.py  test_behavioral_fingerprint.py  test_behavioral_fingerprint_classes.py  test_benchmark_lane_b.py  test_benchmark_residuals.py  test_bridge_init.py  test_build_dr_ducky_worklist.py  test_build_hard_collection_bundle.py  test_build_hard_proof_dataset.py  test_build_hard_theorem_split.py  test_build_move_inventory.py  test_build_nav_training_data.py  test_build_second_order_feature_dataset.py  test_build_second_order_packet_freeze.py  test_censor.py  test_censor_v3.py  test_collect_trigger_states.py  test_contracts.py  test_data_datasets.py  test_data_io.py  test_data_loaders.py  test_domain_gate_init.py  test_dr_ducky.py  test_dr_ducky_executor.py  test_encoder_config.py  test_energy.py  test_eval_retrieval.py  test_evaluate.py  test_evaluate_helpers.py  test_extract_proof_network.py  test_extract_templates.py  test_goal_analyzer_init.py  test_hard_data_tags.py  test_hard_resolution_layer.py  (+63 more)
(+27 files in other folders)
