[project]
name = "wayfinder"
version = "0.1.0"
description = "Navigational proof search through structured semantic networks"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "sentence-transformers>=2.2",
    "transformers>=4.36",
]

[project.optional-dependencies]
axle = [
    "axiom-axle>=1.0.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"scripts/tactic_maps.py" = ["E501"]  # data table with aligned columns
"notebooks/*.ipynb" = ["E402", "F811"]  # late imports; re-imports across cells

[tool.ty]
# Third-party deps not installed in lint environment
[tool.ty.overrides]
[[tool.ty.overrides.options]]
ignore = ["unresolved-import"]

[tool.coverage.run]
source = ["src"]
omit = [
    # Torch-dependent modules with insufficient test coverage for CI threshold
    "src/encoder.py",
    "src/evaluate.py",
    "src/proof_navigator.py",
    "src/proof_network.py",
    "src/trainer.py",
    "src/trainer_checks.py",
    "src/trainer_setup.py",
    "src/trainer_steps.py",
    "src/trainer_validation.py",
    "src/losses.py",
    "src/data.py",
]

[tool.coverage.report]
fail_under = 70

[tool.pytest.ini_options]
testpaths = ["tests"]
