[project]
name = "wayfinder"
version = "0.1.0"
description = "Navigational proof search through structured semantic networks"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "sentence-transformers>=2.2",
    "transformers>=4.36",
]

[project.optional-dependencies]
axle = [
    "axiom-axle>=1.0.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.15.15",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E741"]  # ambiguous variable names (l, I, O) common in math code

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402", "E501"]  # scripts: late imports after logging setup, long data lines
"src/dr_ducky.py" = ["E501"]  # symbolic VM: long tactic templates and match arms
"src/dr_ducky_executor.py" = ["E501"]  # executor: long tactic strings and program builders
"src/hard_resolution_layer.py" = ["E501"]  # data-heavy resolution logic
"src/hardtail_bridge.py" = ["E501"]  # bridge: long tactic/premise strings
"src/proof_search.py" = ["E501"]  # search: long config/tactic lines
"src/strategy_arbiter.py" = ["E501"]  # arbiter: long match arms
"src/second_order_*.py" = ["E501"]  # second-order modules: long feature lines
"src/hard_data_tags.py" = ["E501"]  # data tags
"notebooks/*.ipynb" = ["E402", "F811"]  # late imports; re-imports across cells
"tests/generated/**" = ["F821", "F811", "E501"]  # stubs: EXPECTED placeholder, duplicate names, long imports
"tests/*.py" = ["E501"]  # test assertions with long strings

[tool.ty]
# Third-party deps not installed in lint environment
[tool.ty.overrides]
[[tool.ty.overrides.options]]
ignore = ["unresolved-import"]

[tool.coverage.run]
source = ["src"]
omit = [
    # Torch-dependent modules with insufficient test coverage for CI threshold
    "src/encoder.py",
    "src/evaluate.py",
    "src/proof_navigator.py",
    "src/proof_network.py",
    "src/trainer.py",
    "src/trainer_checks.py",
    "src/trainer_setup.py",
    "src/trainer_steps.py",
    "src/trainer_validation.py",
    "src/losses.py",
    "src/data.py",
]

[tool.coverage.report]
fail_under = 70

[tool.pytest.ini_options]
testpaths = ["tests"]
